# gear3d

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
